Add "description" to task config
Fetch "description" from scenario doc string if no user specified
description then add it to the task config. String "description"
property will be added to the config.

Partial-bug: #1447496

Co-Authored-By: Andrey Kurilin <andr.kurilin@gmail.com>

Change-Id: I882938e86d6c8209b669d7220285e8aa05bdd3e3

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -473,6 +473,9 @@
 
       <div ng-show="view.is_scenario">
         <h1>{{scenario.cls}}.<wbr>{{scenario.name}} ({{scenario.full_duration | number:3}}s)</h1>
+        <div ng-show="scenario.description" style="margin-bottom: 20px;">
+            <i>{{scenario.description}}</i>
+        </div>
         <ul class="tabs">
           <li ng-repeat="t in tabs"
               ng-show="t.isVisible()"
