--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -5,10 +5,21 @@
 {% block title_text %}Rally Task Report{% endblock %}
 
 {% block libs %}
+  {% if include_libs %}
+  <style>
+    {{ include_raw_file("/libs/nv.d3.1.1.15-beta.min.css") }}
+  </style>
+  <script type="text/javascript">
+    {{ include_raw_file("/libs/angular.1.3.3.min.js") }}
+    {{ include_raw_file("/libs/d3.3.4.13.min.js") }}
+    {{ include_raw_file("/libs/nv.d3.1.1.15-beta.min.js") }}
+  </script>
+  {% else %}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.1.15-beta/nv.d3.min.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.1.15-beta/nv.d3.min.js"></script>
+  {% endif %}
 {% endblock %}
 
 {% block js_before %}
