[Verify] New command to install Tempest plugins
This command allows us to install a Tempest plugin from a repository.

E.g.
  $ rally verify installplugin --source https://github.com/MBonell/hello-world-tempest-plugin
  $ rally verify installplugin --source /home/ubuntu/my-plugin

Implements Blueprint: install-tempest-plugins

Change-Id: I03ac6063b6b9d7f860379b99f3b524adedba6df9

--- a/rally/ui/templates/ci/index_verify.html
+++ b/rally/ui/templates/ci/index_verify.html
@@ -61,6 +61,10 @@
     <a href="{{ reinstall.stdout_file }}">Tempest re-installation</a>
     <code>$ {{ reinstall.cmd }}</code>
 
+    <span class="{{ installplugin.status }}">[{{ installplugin.status }}]</span>
+    <a href="{{ installplugin.stdout_file }}">Tempest plugin installation</a>
+    <code>$ {{ installplugin.cmd }}</code>
+
     <span class="{{ genconfig.status }}">[{{ genconfig.status }}]</span>
     <a href="{{ genconfig.stdout_file }}">Tempest config generation</a>
     <code>$ {{ genconfig.cmd }}</code>
