Fix some typos by toolkit typo
There commands:
 $pip install topy
 $cd rally
 $topy -a rally

Change-Id: I40ac3b34b97743edf5edc0a17b9553bb2f3476e2

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -512,7 +512,7 @@
                   <b ng-show="ov_srt=='runner' && ov_dir">&#x25be;</b>
                 </span>
               <th class="sortable"
-                  title="Number of errors occured"
+                  title="Number of errors occurred"
                   ng-click="ov_srt='errors.length'; ov_dir=!ov_dir">
                 Errors
                 <span class="arrow">
