[Scenario] New output format schema
This patch adds schema for new scenario output format
and switches code to usage of this schema.

Change-Id: Iab31b0f55bccfa1ab1f650a42f68bf2cad67707c
Implements: spec improve_scenario_output_format.rst

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -122,7 +122,7 @@
         },{
           id: "output",
           name: "Output",
-          visible: function(){ return !! $scope.scenario.output.length }
+          visible: function(){ return !! $scope.scenario.additive_output.length }
         },{
           id: "failures",
           name: "Failures",
@@ -307,8 +307,8 @@
       }
 
       $scope.renderOutput = function() {
-        if ($scope.scenario) {
-          Charts.stack("#output-stack", $scope.scenario.output, {})
+        if ($scope.scenario && $scope.scenario.additive_output.length) {
+          Charts.stack("#output-stack", $scope.scenario.additive_output[0].data, {})
         }
       }
 
