[Reports] Improve HTML report and add dummy_output scenario
This finally takes new output format into use by two main changes:

 * Reworking and refactoring of HTML report frontend, mainly in
   template rally/ui/templates/task/report.html, so we have
   the following new features and improvements:

   - show output in new format, according to the spec
   - Added AngularJS directive (via attribute `widget')
     that can render all currently used NVD3 charts,
     and generic HTML tables
   - all existent charts (as well as new output charts) and
     generic tables are displayed by our new AngularJS directive
   - Fix: do not show StackedArea if there are less than 2 points
   - code optimization and rafactoring

 * New scenario `Dummy.dummy_output' is added, so we can
   generate random output in new format to see how it is
   displayed in reports.

Change-Id: Ifa30e6ec86217898fbd6133eaa3e3552f466bf26

--- a/rally/ui/templates/base.html
+++ b/rally/ui/templates/base.html
@@ -12,8 +12,8 @@
     p { margin:0; padding:5px 0 }
     p.thesis { padding:10px 0 }
     h1 { color:#666; margin:0 0 20px; font-size:30px; font-weight:normal }
-    h2 { color:#777; margin:20px 0 10px; font-size:25px; font-weight:normal }
-    h3 { color:#666; margin:13px 0 4px; font-size:18px; font-weight:normal }
+    h2, .h2 { color:#666; margin:24px 0 6px; font-size:25px; font-weight:normal }
+    h3, .h3 { color:#777; margin:12px 0 4px; font-size:18px; font-weight:normal }
     table { border-collapse:collapse; border-spacing:0; width:100%; font-size:12px; margin:0 0 10px }
     table th { text-align:left; padding:8px; color:#000; border:2px solid #ddd; border-width:0 0 2px 0 }
     table th.sortable { cursor:pointer }
@@ -21,7 +21,6 @@
     table.compact td { padding:4px 8px }
     table.striped tr:nth-child(odd) td { background:#f9f9f9 }
     table.linked tbody tr:hover { background:#f9f9f9; cursor:pointer }
-    .richcolor td { color:#036; font-weight:bold }
     .rich, .rich td { font-weight:bold }
     .code { padding:10px; font-size:13px; color:#333; background:#f6f6f6; border:1px solid #e5e5e5; border-radius:4px }
 
