[Reports] Various fixes for load profile chart
- Use int instead of float for Y axis
  It's number of parallel iterations and it can't be
  float

- Remove accuracy that makes no sense, and creates a lot
  of noise on this graph

- 100 points is enough for such type of graph

- Include failed iterations as well, otherwise
  we will calculate load incorrectly

- Graph should start from 0 (begging of experiment)

- Add 2 points at the end of graph to get at the end of graph
  0 iterations in parallel

Co-Authored-By: Boris Pavlovic <boris@pavlovic.me>
Co-Authored-By: Alexander Maretskiy <amaretskiy@mirantis.com>
Change-Id: Ia81998231def3220767e73462abad6bd25df1c18

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -673,6 +673,7 @@
                title="Load Profile"
                title-class="h3"
                name-x="Timeline (seconds)"
+               format-y="d"
                format-x=",.2f"
                class="lower">
           </div>
