[Reports] Hotfix for rendering tables in HTML report
There is a bug appeared - tables in report are broken!

Angular directive "ui/templates/task/directive_widget.js"
is processed by Jinja2 so JavaScript becomes corrupted.

This change enables raw including, without any changes
in directive, so we have the bug fixed.

Change-Id: I2cf2e7fc6750bf96e2e3cb0c809ba339b543d89a

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -24,7 +24,7 @@
 
 {% block js_before %}
     "use strict";
-    {% include "/task/directive_widget.js" %}
+    {{ include_raw_file("/task/directive_widget.js") }}
     var controllerFunction = function($scope, $location) {
         $scope.source = {{ source }};
         $scope.scenarios = {{ data }};
