--- a/rally/ui/templates/ci/index_verify.html
+++ b/rally/ui/templates/ci/index_verify.html
@@ -53,6 +53,10 @@
     <a href="{{ install.stdout_file }}">Tempest installation</a>
     <code>$ {{ install.cmd }}</code>
 
+    <span class="{{ reinstall.status }}">[{{ reinstall.status }}]</span>
+    <a href="{{ reinstall.stdout_file }}">Tempest re-installation</a>
+    <code>$ {{ reinstall.cmd }}</code>
+
     <span class="{{ genconfig.status }}">[{{ genconfig.status }}]</span>
     <a href="{{ genconfig.stdout_file }}">Tempest config generation</a>
     <code>$ {{ genconfig.cmd }}</code>
