[Reports] Conditionally reformat atomic charts layout
This resolves issue with Pie chart layout on tab
Details->Distribution in case if there are too many atomic
actions. Sometimes Pie chart becomes so small that it is
not possible to determine results.

This patch makes Details->Distribution charts (Pie+Histogram)
layout conditional. If there are 9 or more atomic actions,
then Pie chart takes 100% width and Histogram is shown
under Pie chart.

Change-Id: I67cbea5c60500b14ae3ae1a8f837d3a78ebf63e4

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -172,11 +172,17 @@
         }
       }
 
+      /* Other helpers */
+
       $scope.showError = function(message) {
           return (function (e) {
             e.style.display = "block";
             e.textContent = message
           })(document.getElementById("page-error"))
+      }
+
+      $scope.compact_atomics = function() {
+        return ($scope.scenario && $scope.scenario.atomic.iter.length < 9)
       }
 
       /* Initialization */
@@ -502,12 +508,14 @@
                data="scenario.atomic.pie"
                title="Distribution"
                title-class="h3"
-               style="float:left; width:40%; margin-top:15px">
+               style="float:left; margin-top:15px"
+               ng-style="compact_atomics() ? {width:'40%'} : {}">
           </div>
 
           <div widget="Histogram" data="scenario.atomic.histogram.data[atomicHistogram.id]"
                ng-if="scenario.atomic.histogram.data.length"
-               style="float:left; width:59%; margin-top:15px; position:relative; top:40px">
+               style="float:left; position:relative; top:40px"
+               ng-style="compact_atomics() ? {width:'59%', 'margin-top':'15px'} : {}">
           </div>
 
           <select ng-show="scenario.atomic.histogram.data.length"
