--- a/rally/ui/templates/task/trends.html
+++ b/rally/ui/templates/task/trends.html
@@ -373,7 +373,7 @@
         <script type="text/ng-template" id="total">
           <div ng-if="wload.single">
             <div style="margin:30px 0 10px; font-size:14px; color:#ff6622">
-              This wrokload has single run so trends can not be displayed.<br>
+              This workload has single run so trends can not be displayed.<br>
               There should be at least two workload results with the same configuration
             </div>
           </div>
